added lists of ruby gems updated and added to CFME 5.5.2 to the release notes. Did a restructure of the chapter so it's organized in sections by release.

--- a/doc-Release_Notes/changes_in_the_core_set_of_ruby_gems.adoc
+++ b/doc-Release_Notes/changes_in_the_core_set_of_ruby_gems.adoc
@@ -6,7 +6,7 @@ Red Hat CloudForms ships with a core set of Ruby gems used by the CloudForms Man
 The Ruby gems in this set are subject to change, and have changed since CloudForms 3.2 (CloudForms Management Engine 5.4). If you are calling gems using Automate that are no longer in the CloudForms Management Engine Appliance, you can install them by using the `gem install` command.
 
 While gems can be imported into automation methods using `require`, it is recommended that the authors of the automation methods clearly document the use of gems either in the core set or a custom set.
-It is the responsibility of the author of such custom automation to own the life cycle of any gem being referenced in those methods. 
+It is the responsibility of the author of such custom automation to own the life cycle of any gem being referenced in those methods.
 
 You can find a list of all gems included in the appliance in `/var/www/miq/vmdb/log/gem_list.txt`
 
@@ -14,14 +14,16 @@ To get lists of all gems for different CloudForms Management Engine releases, se
 
 * https://access.redhat.com/articles/1534753
 
-=== Removed Ruby Gems in CloudForms Management Engine 5.5
+=== Changes to Ruby Gems in CloudForms Management Engine 5.5.0
 
-CloudForms Management Engine 5.5 removes the following gem from the core set of Ruby gems included in the appliance:
+==== Removed Ruby Gems in CloudForms Management Engine 5.5.0
+
+CloudForms Management Engine 5.5.0 removes the following gems from the core set of Ruby gems included in the appliance:
 
 [cols="1,1", frame="all", options="header"]
 |===
 |Removed Ruby Gem
-|Version in CFME 5.5
+|Version in CFME 5.5.0
 
 |actionwebservice
 |3.1.0
@@ -99,14 +101,14 @@ CloudForms Management Engine 5.5 removes the following gem from the core set of 
 |1.4.15
 |===
 
-=== New Ruby Gems in CloudForms Management Engine 5.5
+==== New Ruby Gems in CloudForms Management Engine 5.5.0
 
-CloudForms Management Engine 5.5 adds the following new gems to the core set of Ruby gems included in the appliance:
+CloudForms Management Engine 5.5.0 adds the following new gems to the core set of Ruby gems included in the appliance:
 
 [cols="1,1", frame="all", options="header"]
 |===
 |New Ruby Gem
-|Version in CFME 5.5
+|Version in CFME 5.5.0
 
 |actionview
 |4.2.4
@@ -123,201 +125,201 @@ CloudForms Management Engine 5.5 adds the following new gems to the core set of 
 |autoprefixer-rails
 |6.0.3
 
-|azure-armrest 
+|azure-armrest
 |0.0.2
 
-|bcrypt 
+|bcrypt
 |3.1.10
 
-|bootstrap-sass 
+|bootstrap-sass
 |3.3.5.1
 
-|cache 
+|cache
 |0.4.1
 
-|cache_method 
+|cache_method
 |0.2.7
 
-|climate_control 
+|climate_control
 |0.0.3
 
-|cocaine 
+|cocaine
 |0.5.7
 
-|codemirror-rails 
+|codemirror-rails
 |4.2
 
-|domain_name 
+|domain_name
 |0.5.24
 
-|escape_utils 
+|escape_utils
 |1.1.0
 
-|fog-dynect 
+|fog-dynect
 |0.0.2
 
-|fog-google 
+|fog-google
 |0.0.9
 
-|fog-xenserver 
+|fog-xenserver
 |0.2.2
 
-|font-awesome-sass 
+|font-awesome-sass
 |4.3.2.1
 
-|globalid 
+|globalid
 |0.3.6
 
-|hamlit 
+|hamlit
 |1.7.2
 
-|hamlit-rails 
+|hamlit-rails
 |0.1.0
 
-|http-cookie 
+|http-cookie
 |1.0.2
 
-|jquery-hotkeys-rails 
+|jquery-hotkeys-rails
 |0.7.9.1
 
-|linux_block_device 
+|linux_block_device
 |0.1.0
 
-|lodash-rails 
+|lodash-rails
 |3.10.1
 
-|loofah 
+|loofah
 |2.0.3
 
 |manageiq_foreman
 |0.0.2
 
-|memory_buffer 
+|memory_buffer
 |0.1.0
 
-|mimemagic 
+|mimemagic
 |0.3.0
 
-|mini_portile 
+|mini_portile
 |0.6.2
 
-|net_app_manageability 
+|net_app_manageability
 |0.1.0
 
-|openscap 
+|openscap
 |0.4.3
 
-|openshift_client 
+|openshift_client
 |0.1.0
 
-|paperclip 
+|paperclip
 |4.3.1
 
-|patternfly-sass 
+|patternfly-sass
 |2.2.0
 
-|puma 
+|puma
 |2.13.4
 
-|rails-assets-angular 
+|rails-assets-angular
 |1.4.6
 
-|rails-assets-angular-mocks 
+|rails-assets-angular-mocks
 |1.4.6
 
-|rails-assets-bootstrap 
+|rails-assets-bootstrap
 |3.3.5
 
-|rails-assets-bootstrap-datepicker 
+|rails-assets-bootstrap-datepicker
 |1.4.1
 
-|rails-assets-bootstrap-hover-dropdown 
+|rails-assets-bootstrap-hover-dropdown
 |2.0.11
 
-|rails-assets-bootstrap-select 
+|rails-assets-bootstrap-select
 |1.7.3
 
-|rails-assets-c3 
+|rails-assets-c3
 |0.4.10
 
-|rails-assets-d3 
+|rails-assets-d3
 |3.5.0
 
-|rails-assets-jquery 
+|rails-assets-jquery
 |2.1.4
 
-|rails-assets-kubernetes-topology-graph 
+|rails-assets-kubernetes-topology-graph
 |0.0.17
 
-|rails-assets-markusslima--bootstrap-filestyle 
+|rails-assets-markusslima--bootstrap-filestyle
 |1.2.1
 
-|rails-assets-moment 
+|rails-assets-moment
 |2.10.6
 
-|rails-assets-moment-strftime 
+|rails-assets-moment-strftime
 |0.1.5
 
-|rails-assets-moment-timezone 
+|rails-assets-moment-timezone
 |0.4.0
 
-|rails-assets-numeral 
+|rails-assets-numeral
 |1.5.3
 
-|rails-assets-sprintf 
+|rails-assets-sprintf
 |1.0.3
 
-|rails-deprecated_sanitizer 
+|rails-deprecated_sanitizer
 |1.0.3
 
-|rails-dom-testing 
+|rails-dom-testing
 |1.0.7
 
-|rails-html-sanitizer 
+|rails-html-sanitizer
 |1.0.2
 
-|redhat_access_cfme 
+|redhat_access_cfme
 |0.0.1
 
-|responders 
+|responders
 |2.1.0
 
-|ruby_parser 
+|ruby_parser
 |3.7.1
 
-|sass-rails 
+|sass-rails
 |5.0.4
 
-|sexp_processor 
+|sexp_processor
 |4.6.0
 
-|sprockets-rails 
+|sprockets-rails
 |2.3.3
 
-|sys-uname 
+|sys-uname
 |1.0.2
 
-|temple 
+|temple
 |0.7.6
 
-|thread_safe 
+|thread_safe
 |0.3.5
 
-|unf 
+|unf
 |0.1.4
 
-|unf_ext 
+|unf_ext
 |0.0.7.1
 |===
 
-=== Updated Ruby Gems in CloudForms Management Engine 5.5
+==== Updated Ruby Gems in CloudForms Management Engine 5.5.0
 
-The following Ruby gems included in CloudForms Management Engine 5.4.3 have been updated in CloudForms Management Engine 5.5.
+The following Ruby gems included in CloudForms Management Engine 5.4.3 have been updated in CloudForms Management Engine 5.5.0:
 
 [cols="1,1", frame="all", options="header"]
 |===
 |Updated Ruby Gem
-|Version in CFME 5.5
+|Version in CFME 5.5.0
 
 |actionmailer
 |4.2.4
@@ -435,4 +437,81 @@ The following Ruby gems included in CloudForms Management Engine 5.4.3 have been
 
 |uglifier
 |2.7.2
+|===
+
+=== Changes to Ruby Gems in CloudForms Management Engine 5.5.2
+
+==== Removed Ruby Gems in CloudForms Management Engine 5.5.2
+
+No Ruby gems were removed from the appliance in CloudForms Management Engine 5.5.2.
+
+==== New Ruby Gems in CloudForms Management Engine 5.5.2
+
+CloudForms Management Engine 5.5.2 adds the following new gem to the core set of Ruby gems included in the appliance:
+
+[cols="1,1", frame="all", options="header"]
+|===
+|New Ruby Gem
+|Version in CFME 5.5.2
+
+|concurrent-ruby
+|1.0.0
+|===
+
+==== Updated Ruby Gems in CloudForms Management Engine 5.5.2
+
+The following Ruby gems included in CloudForms Management Engine 5.5.0 have been updated in CloudForms Management Engine 5.5.2:
+
+[cols="1,1", frame="all", options="header"]
+|===
+|Updated Ruby Gem
+|Version in CFME 5.5.2
+
+|amq-protocol
+|2.0.1
+
+|autoprefixer-rails
+|6.2.1
+
+|bundler
+|1.11.2
+
+|css_splitter
+|0.4.3
+
+|dalli
+|2.7.5
+
+|fog-sakuracloud
+|1.7.3
+
+|gettext_i18n_rails
+|1.3.2
+
+|iniparse
+|1.4.2
+
+|linux_admin
+|0.13.0
+
+|rails-assets-bootstrap-select
+|1.7.7
+
+|rdoc
+|4.2.1
+
+|redhat_access_cfme
+|0.0.7
+
+|responders
+|2.1.1
+
+|sass
+|3.4.20
+
+|secure_headers
+|2.4.4
+
+|sprockets
+|3.5.2
 |===
