Updated the Release Notes and General Configuration guide to remove Satellite 5.x references.

--- a/doc-Release_Notes/register_cfme.adoc
+++ b/doc-Release_Notes/register_cfme.adoc
@@ -37,26 +37,18 @@ The *Red Hat Updates* page enables you to register appliances. You will need the
 * Your Red Hat Account login or Red Hat Network Satellite login
 * A Red Hat subscription that covers your product
 
-image::6637.png[]
+image::cfme-register-appliance.png[]
 
 . Navigate to menu:Configure[Configuration]. Select *Region* in the accordion menu, and click the *Red Hat Updates* tab.
 . In *Red Hat Software Updates*, click *Edit Registration*.
 . You can register the CloudForms Management Engine Appliance using one of three available options:
 * Red Hat Subscription Management
-* Red Hat Satellite 5
 * Red Hat Satellite 6
 The Subscription Management Service you register with will provide your systems with updates and allow additional management.
 ** To register with Red Hat Subscription Management:
 .. In Register to, select *Red Hat Subscription Management*.
 .. Enter *Red Hat Subscription Management Address*. The default is *subscription.rhn.redhat.com*. 
 .. Enter *Repository Name*. The default is *cf-me-5.5-for-rhel-7-rpms rhel-server-rhscl-7-rpms* footnoteref:[Optional, For installing required sssd packages on base OS RHEL 7.1, subscribe to *rhel-7-server-optional-rpms* repository.]
-.. To use an HTTP proxy, select *Use HTTP Proxy*.
-.. Enter your Red Hat account information, and click *Validate*.
-.. Click *Save*.
-** To register with Red Hat Satellite 5:
-.. In *Register to*, select *Red Hat Satellite 5*.
-.. Enter Red Hat Satellite 5 Address. The default is *subscription.rhn.redhat.com*.
-.. Enter *Repository Name*. The default is *cf-me-5.5-for-rhel-7-rpms rhel-server-rhscl-7-rpms*. footnoteref:[Optional]
 .. To use an HTTP proxy, select *Use HTTP Proxy*.
 .. Enter your Red Hat account information, and click *Validate*.
 .. Click *Save*.
