--- a/doc-General_Configuration/Configuration.adoc
+++ b/doc-General_Configuration/Configuration.adoc
@@ -323,7 +323,7 @@ To Edit Customer Information
 . Navigate to +Configure → Configuration+. Select +Settings → Region+ in the accordion menu and click the +Red Hat Updates+ tab.
 . Click +Edit+ Registration.
 . The +Customer Information+ area displays options to edit registration, User ID, and Password.
-* +Register+ to field provides options for the Customer Portal, RHN Satellite v5 for Red Hat Satellite 5.x servers, and RHN Satellite v6 for Red Hat Satellite 6.x servers. If switching to RHN Satellite v5 or v6, the page will refresh and a prompt for a Server URL will be included in the Customer Information area.
+* +Register+ to field provides options for the Customer Portal and RHN Satellite v6 for Red Hat Satellite 6.x servers. If switching to RHN Satellite v6, the page will refresh and a prompt for a Server URL will be included in the Customer Information area.
 * When the +HTTP Proxy+ is selected, options to enable usage of the HTTP Proxy are displayed. Provide information of your HTTP Proxy in the +HTTP Proxy Address+, +Login+, and +Change Password / Confirm Password+ boxes. For more information on how to use HTTP Proxy, see +Using HTTP Proxy+ in the +Red Hat Subscription Management Guide+.
 image:6322.png[]
 * In the +Enter your Red Hat+ account information area, fill out the +Login+ and +Password+ of your customer account details for the Customer Portal or Satellite. Click +Validate+.
@@ -336,25 +336,17 @@ The +Red Hat Updates+ page enables you to register appliances. You will need the
 * Your Red Hat Account login or Red Hat Network Satellite login
 * A Red Hat subscription that covers your product
 
-image:6637.png[]
+image:cfme-register-appliance.png[]
 
 . Navigate to +Configure → Configuration+. Select +Region+ in the accordion menu, and click the +Red Hat Updates+ tab.
 . In +Red Hat Software Updates+, click +Edit Registration+.
 . You can register the CloudForms Management Engine Appliance using one of three available options:
 * Red Hat Subscription Management
-* Red Hat Satellite 5
 * Red Hat Satellite 6
 The Subscription Management Service you register with will provide your systems with updates and allow additional management.
 ** To register with Red Hat Subscription Management:
 .. In +Register to+, select +Red Hat Subscription Management+.
 .. Enter +Red Hat Subscription Management Address+. The default is +subscription.rhn.redhat.com+.
-.. Enter +Repository Name+. The default is +cf-me-5.5-for-rhel-7-rpms rhel-server-rhscl-7-rpms+.
-.. To use an HTTP proxy, select +Use HTTP Proxy+.
-.. Enter your Red Hat account information, and click +Validate+.
-.. Click +Save+.
-** To register with Red Hat Satellite 5:
-.. In Register to, select +Red Hat Satellite 5+.
-.. Enter +Red Hat Satellite 5 Address+. The default is +subscription.rhn.redhat.com+.
 .. Enter +Repository Name+. The default is +cf-me-5.5-for-rhel-7-rpms rhel-server-rhscl-7-rpms+.
 .. To use an HTTP proxy, select +Use HTTP Proxy+.
 .. Enter your Red Hat account information, and click +Validate+.
