added css_splitter gem to 5.5.0 new gems after testing to verify it's new in 5.5.0

--- a/doc-Release_Notes/changes_in_the_core_set_of_ruby_gems.adoc
+++ b/doc-Release_Notes/changes_in_the_core_set_of_ruby_gems.adoc
@@ -149,6 +149,9 @@ CloudForms Management Engine 5.5.0 adds the following new gems to the core set o
 |codemirror-rails
 |4.2
 
+|css_splitter
+|0.4.2
+
 |domain_name
 |0.5.24
 
@@ -477,7 +480,7 @@ The following Ruby gems included in CloudForms Management Engine 5.5.0 have been
 |1.11.2
 
 |css_splitter
-|0.4.3
+|0.4.4
 
 |dalli
 |2.7.5
