Removed highlighting from 'VMDB', where it is not a guilabel

--- a/doc-General_Configuration/Configuration.adoc
+++ b/doc-General_Configuration/Configuration.adoc
@@ -47,7 +47,7 @@ Regions are used to consolidate data from multiple VMDBs to a central database. 
 
 [NOTE]
 ======
-The subordinate regions are not aware of each other from a database perspective. You cannot see information from one subordinate region in another. The only *VMDB* with data visibility to all subordinate regions is the top level.
+The subordinate regions are not aware of each other from a database perspective. You cannot see information from one subordinate region in another. The only VMDB with data visibility to all subordinate regions is the top level.
 ======
 
 *Master Regions Scope*
@@ -116,7 +116,7 @@ To Create a Tag Category:
 . Click image:1848.png[](Click to add a new category).
 . In the *Category Information* area,
 image:2042.png[]
-* Use *Name* to create a short name that refers to category in the *VMDB*.
+* Use *Name* to create a short name that refers to category in the VMDB.
 +
 [NOTE]
 ======
@@ -185,7 +185,7 @@ When you delete a tag, the tag is also deleted from any resource to which it was
 
 ====== Importing Tags for Virtual Machines
 
-You can import a *CSV file* with tag assignments into the *VMDB*. For the import to be successful, be aware of the following:
+You can import a *CSV* file with tag assignments into the VMDB. For the import to be successful, be aware of the following:
 
 * The file must be in the following format, with one line for each virtual machine. One virtual machine per tag must be on a separate line even if you are assigning multiple tags of the same category.
 * You must use the display names of the category and the display name for the tag for the import to work.
@@ -221,7 +221,7 @@ If there are any problems with the file, such as an incorrect column name, unkno
 
 ====== Importing Custom Values for Virtual Machines and Hosts
 
-You can import a *CSV file* with asset tag information into the *VMDB* for a virtual machine or import custom values for hosts.
+You can import a *CSV* file with asset tag information into the VMDB for a virtual machine or import custom values for hosts.
 For the import to be successful, the file must be in the following format, with one line for each virtual machine or host.
 
 * There are two columns.
@@ -293,7 +293,7 @@ The following tools are used during the update process:
 
 [IMPORTANT]
 ======
-The update worker synchronizes the *VMDB* with the status of available CloudForms Management Engine content every 12 hours.
+The update worker synchronizes the VMDB with the status of available CloudForms Management Engine content every 12 hours.
 ======
 
 [NOTE]
