--- a/doc-Deployment_Planning_Guide/Capacity.adoc
+++ b/doc-Deployment_Planning_Guide/Capacity.adoc
@@ -485,10 +485,17 @@ in `txt` or `csv` format.
 
 CloudForms Management Engine can show where bottlenecks occur in your
 virtual infrastructure. You can view them either on a timeline or as a
-report which can be downloaded for further analysis.
+report which can be downloaded for further analysis. 
+
+Bottleneck reports use the same mechanism to gather data as Capacity and Utilization reports. See, link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collected[Data Collected], for more information on enabling data collection.
+
+For bottleneck reports to work as expected, the data collection for Capacity and Utilization reports should be enabled for the relevant backend provider. See the following documentation to enable data collection for RHEV and OpenStack provider. 
+
+For RHEV: https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_virtualization_3_3_and_3_4
+
+For OpenStack: https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_linux_openstack_platform
 
 ==== Viewing the Bottleneck Summary
-
 To find out more about bottleneck capacity or utilization, view a
 bottleneck summary.
 
