added more prerequisites

--- a/doc-Deployment_Planning_Guide/Capacity.adoc
+++ b/doc-Deployment_Planning_Guide/Capacity.adoc
@@ -487,9 +487,12 @@ CloudForms Management Engine can show where bottlenecks occur in your
 virtual infrastructure. You can view them either on a timeline or as a
 report which can be downloaded for further analysis. 
 
-==== Prerequisite
+==== Prerequisites
 
-* Bottleneck reports use the same mechanism to gather data as Capacity and Utilization reports. See, link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collected[Data Collected], for more information on enabling data collection in CloudForms Management Engine.
+* Bottleneck reports use the same mechanism to gather data as Capacity and Utilization reports. To enable data collection in CloudForms Management Engine, see the following sections.
+** link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles]
+** link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collected[Data Collected]
+* Additionally, navigate to menu:Config[Configuration]. Select *Region* in the left pane of the Appliance. Under the *C & U Collection* tab, check the boxes for "Collect for All Clusters"/"Collect for All Datastores" or check the clusters/datastores you desire.
 * For bottleneck reports to work as expected, the data collection for Capacity and Utilization reports should also be enabled for the relevant backend provider. See the following documentation to enable data collection for RHEV and OpenStack provider. 
 ** For RHEV: https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_virtualization_3_3_and_3_4
 ** For OpenStack: https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_linux_openstack_platform
