Added Note under Bottlenecks->Prerequisites, about the expected time for report generation.

--- a/doc-Deployment_Planning_Guide/Capacity.adoc
+++ b/doc-Deployment_Planning_Guide/Capacity.adoc
@@ -497,6 +497,16 @@ report which can be downloaded for further analysis.
 ** For RHEV: https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_virtualization_3_3_and_3_4
 ** For OpenStack: https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#data_collection_for_red_hat_enterprise_linux_openstack_platform
 
+[NOTE]
+======
+For reporting of daily bottleneck data, incomplete days
+(days with less than 24 hourly data points from midnight to midnight)
+that are at the beginning or end of the requested interval are excluded.
+Days with less than 24 hourly data points would be inaccurate and
+including them would skew trend lines. Therefore, at least one full day
+of hourly data from midnight to midnight is necessary for displaying the
+bottleneck charts under the *Optimize* tab.
+======
 ==== Viewing the Bottleneck Summary
 To find out more about bottleneck capacity or utilization, view a
 bottleneck summary.
